--- a/web/package.json
+++ b/web/package.json
@@ -12,9 +12,11 @@
     "@chakra-ui/react": "^2.3.7",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "apexcharts": "^3.36.3",
     "framer-motion": "^6",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
