--- a/web/package.json
+++ b/web/package.json
@@ -12,13 +12,18 @@
     "@chakra-ui/react": "^2.3.7",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@hookform/resolvers": "^2.9.10",
+    "@reduxjs/toolkit": "^1.9.0",
     "apexcharts": "^3.36.3",
     "framer-motion": "^6",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3"
+    "react-hook-form": "^7.39.3",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
