--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
+    "redux-persist": "^6.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
